--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: 'border-box';
+  font-family: 'Montserrat', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif';
   margin: 0;
   padding: 0;
 }
@@ -15,11 +16,10 @@ a {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: auto;
 }
 
 code {
